--- a/trunk/layouts/xe_globalOne/css/default.css
+++ b/trunk/layouts/xe_globalOne/css/default.css
@@ -13,7 +13,7 @@ body{background:#fff url(../images/default/bg_body.gif) repeat-x 0 0;font-family
 #header{position:relative;width:947px;height:120px;margin-bottom:10px; z-index:100}
 #header h1{position:absolute;top:17px;left:0;margin:0;padding:0}
 #language{position:absolute;top:18px;right:0;z-index:200;margin:0;font-family:Arial, Helvetica, sans-serif}
-#language dt{float:left;margin-right:8px;color:#3f4140}
+#language dt{float:left;margin:2px 8px 0 0;color:#3f4140}
 #language dd{float:left;position:relative;width:79px;height:16px;margin:0;border:1px solid #939393;background:#a7a7a7;line-height:16px}
 #language dd a{display:block;padding:0 0 0 6px;background:url(../images/default/ico_arw.gif) no-repeat 98% 50%;color:#fff;font-size:12px;text-decoration:none}
 #language ul{display:none;position:absolute;top:15px;left:-1px;width:79px;border:1px solid #939393;border-bottom:0;background:#cfcfcf}
@@ -33,7 +33,12 @@ body{background:#fff url(../images/default/bg_body.gif) repeat-x 0 0;font-family
 .gnb ul li .sub{position:absolute;top:36px;left:0;z-index:300;margin:0;padding:0;border:1px solid #adb1c6;background:#fff; z-index:500}
 .gnb ul li .sub li{clear:both;height:33px;margin:0;padding:0;background:none;line-height:33px;text-align:center;*zoom:1}
 .gnb ul li .sub li a{background:none;color:#9fa09f;}
-.gnb ul li .sub li a:hover{background:#777e98; color:#fff!important;text-decoration:none}
+.gnb ul li .sub li a:hover{background:url(../images/default/bg_gnb2.gif) repeat-x; _background:#777e98; color:#fff!important;text-decoration:none}
+.gnb li.last{ background:none}
+
+
+
+
 #isSearch{padding:19px 0 15px 21px;border:1px solid #fff;background:#f3f4f4;border-radius:5px 5px 0 0}
 #isSearch .searchOrder{display:none}
 #isSearch .checked{display:block;position:absolute;top:0;left:0;width:64px;height:14px;padding:5px 0 0 5px;background:url(../images/default/bgSearchTerm.gif) no-repeat;color:#fff;font:11px '돋움', Dotum, '굴림', Gulim, AppleGothic, Sans-serif;line-height:normal;text-align:left}
@@ -72,7 +77,7 @@ body{background:#fff url(../images/default/bg_body.gif) repeat-x 0 0;font-family
 #columnLeft .lnb .list li{height:22px;margin:0;padding:0;line-height:22px;list-style:none}
 #columnLeft .lnb .list li a{display:block;padding-left:22px;color:#3a3a3a;text-decoration:none;*zoom:1}
 #columnLeft .lnb .list li a:hover,
-#columnLeft .lnb .list li.on{border-bottom:1px solid #d4d4d4;background:#eaeaea url(../images/default/ico_are.gif) no-repeat 98% 50%}
+#columnLeft .lnb .list li.on{border-bottom:1px solid #d4d4d4;background:#eaeaea url(../images/default/ico_are.gif) no-repeat 98% 50%; font-weight:bold}
 /* Site Layout - Footer */
 #footer{clear:both;margin:0;padding:11px 0 46px;border-top:1px solid #dbdbdb;text-align:left}
 #footer li.first-child{background:none}
