--- a/widgets/xeBanner/skins/xeHome/banner.css
+++ b/widgets/xeBanner/skins/xeHome/banner.css
@@ -33,7 +33,7 @@ ul.imgSet					{height:418px;position:absolute;left:width:100%;top:0;}
 .imgSet li					{width:958px;height:420px;float:left;}
 .imgSet div.item			{position:relative;z-index:50;}
 .imgSet li p				{position:absolute;x:0;y:0;z-index:20;margin:0;}
-.slides_container div.shadow		{position:absolute;left:15px;top:321px;z-index:10;}
+.slides_container div.shadow		{position:absolute;left:15px;margin-top:-105px;z-index:10;}
 .slides_container .section 	img{position:relative;z-index:50;}
 
 
