--- a/trunk/modules/kin/skins/xe_official/css/kin.css
+++ b/trunk/modules/kin/skins/xe_official/css/kin.css
@@ -79,6 +79,8 @@ ul.listTitle li.noLine { border-left:none; margin:0; padding:0; }
 .listBox td a:hover { text-decoration:underline; }
 .listBox thead th{ text-align:left; background:#f4f4f4; border-bottom:1px solid #ddd;}
 .listBox tbody th{ text-align:left; padding-right:20px;}
+.listBox thead th.category{ border-left:1px solid #DDD;}
+.listBox thead th.date{ border-right:1px solid #DDD;}
 .listBox th.category a { font-weight:normal; color:#888; text-decoration:none;}
 .listBox td.title span.pointGift { background:none; padding:2px; border:1px solid #F3F9FD; background-color:#5589AE; font-weight:bold; font-size:8px; font-family:tahoma; color:#CAE0EF; }
 .listBox td.title span { font-size:9px; font-family:verdana; font-weight:bold; color:#aaa; padding-left:16px; background:url(../img/iconReply.gif) no-repeat left top; margin-left:5px; }
